# tic-tac-toe-C

./: .gitattributes  meson.build  valgrind-out.txt
include/: deep_q.h  definitions.h  game.h  gui.h  linked_list.h  minimax.h  sound.h  tui.h  util.h
python/: ttt.py
src/: deep_q.c  game.c  gui.c  linked_list.c  linked_list_man.S  main.c  minimax.c  sound.c  tui.c  util.c
weights/: fingerprint.pb  saved_model.pb
weights/variables/: variables.data-00000-of-00001  variables.index
